# InfoExchange

./: 2018-11-30 simple log.md
Nano/20181017_tf_training/: 20181017_Log ( tf_training ).ipynb
alice/: PAIRLABS_workload_alice.md  README.md  workload.md
alice/notes/: GUI_vnc_http.md  README.md  ROS.md  TMUX.md  change_docker_id.md  docker.md  ros_tutorial.md  temp.md  turtlebot3.md
henry/OpenGo-Manual/: README.md
henry/OpenPAI-Manual/: README.md
henry/TWGC-Manual/: README.md
henry/doc/: swpm-member-list-csv.csv
jaden/Auto_change_docker_id/: idrun.sh  readme.md
jaden/build_image_with_host_id/: Dockerfile  idBuild.sh  readme.md
jaden/gazebo_world_example/: Launch Gazebo world.odp  readme.md
jaden/jaden-pairbot/: readme.md
jaden/ros_basis_and_turtlebot3/: readme.md
jaden/ros_tf_example/: ROS_tf_introduction.odp  conv.py  readme.md  spinTurtle  spinTurtle_box
nano/20181019_tf_training2/: 20181019_Log (tf - time and frame).ipynb
nano/ArangoDB/: 1_ArangoDB Concept.md  (+2 more)
nano/catkin_ws/src/pairworld_gazebo/: CMakeLists.txt  package.xml
nano/catkin_ws/src/pairworld_gazebo/launch/: flocking.launch  pairbot_test.launch
nano/catkin_ws/src/pairworld_gazebo/models/construction_cone/: model-1_3.sdf  model-1_4.sdf  model.sdf
nano/catkin_ws/src/pairworld_gazebo/models/garden_bridge/: model.sdf
nano/catkin_ws/src/pairworld_gazebo/models/grey_wall/: model-1_4.sdf  model.sdf
nano/catkin_ws/src/pairworld_gazebo/models/wooden_watch_tower/: model-1_4.sdf  model.config  model.sdf
nano/catkin_ws/src/pairworld_gazebo/worlds/: pairbot_test.world
(+1024 files in other folders)
