<package>
  <name>pairworld_gazebo</name>
  <version>0.1.0</version>
  <description>pairworld_gazebo</description>
  <maintainer email="jadenlin0106@gmail.com">Jaden Lin</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="jadenlin0106@gmail.com">Jaden Lin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>pb_control</run_depend>
  <run_depend>pb_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>
